--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ build:
     - docker build
         --cache-from $IMAGE:latest
         --tag $IMAGE:latest
-        --file ./Dockerfile.prod
+        --file ./services/users/Dockerfile.prod
         --build-arg SECRET_KEY=$SECRET_KEY
         "."
     - docker push $IMAGE:latest
@@ -59,7 +59,7 @@ deploy:
     - chmod +x ./release.sh
     - docker build
         --tag $HEROKU_REGISTRY_IMAGE
-        --file ./Dockerfile.prod
+        --file ./services/users/Dockerfile.prod
         --build-arg SECRET_KEY=$SECRET_KEY
         "."
     - docker login -u _ -p $HEROKU_AUTH_TOKEN registry.heroku.com
