--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ build:
         --tag $IMAGE:latest
         --file ./services/users/Dockerfile.prod
         --build-arg SECRET_KEY=$SECRET_KEY
-        "."
+        "./services/users"
     - docker push $IMAGE:latest
 
 test:
