Updated GitLab CI to build and test both frontent and backend services

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
 variables:
   IMAGE: ${CI_REGISTRY}/${CI_PROJECT_NAMESPACE}/${CI_PROJECT_NAME}
 
-build:
+build:users:
   stage: build
   services:
     - docker:dind
@@ -15,18 +15,35 @@ build:
     DOCKER_DRIVER: overlay2
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_JOB_TOKEN $CI_REGISTRY
-    - docker pull $IMAGE:latest || true
+    - docker pull $IMAGE:users || true
     - docker build
-        --cache-from $IMAGE:latest
-        --tag $IMAGE:latest
+        --cache-from $IMAGE:users
+        --tag $IMAGE:users
         --file ./services/users/Dockerfile.prod
         --build-arg SECRET_KEY=$SECRET_KEY
         "./services/users"
-    - docker push $IMAGE:latest
+    - docker push $IMAGE:users
 
-test:
+build:client:
+  stage: build
+  services:
+    - docker:dind
+  variables:
+    DOCKER_DRIVER: overlay2
+    REACT_APP_USERS_SERVICE_URL: http://localhost:5001
+  script:
+    - docker login -u $CI_REGISTRY_USER -p $CI_JOB_TOKEN $CI_REGISTRY
+    - docker pull $IMAGE:client || true
+    - docker build
+        --cache-from $IMAGE:client
+        --tag $IMAGE:client
+        --file ./services/client/Dockerfile.ci
+        "./services/client"
+    - docker push $IMAGE:client
+
+test:users:
   stage: test
-  image: $IMAGE:latest
+  image: $IMAGE:users
   services:
     - postgres:latest
   variables:
@@ -42,3 +59,12 @@ test:
     - python -m flake8 project
     - python -m black project --check
     - python -m isort project/**/*.py --check-only
+
+test:client:
+  stage: test
+  image: $IMAGE:client
+  script:
+    - cd /usr/src/app
+    - npm run prettier:check
+    - npm run lint
+    - npm run test
