--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ pytest-xdist = "*"
 [packages]
 flask = "*"
 flask-admin = "*"
+flask-bcrypt = "*"
 flask-cors = "*"
 flask-restx = "*"
 flask-sqlalchemy = "*"
