--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ flask-restx = "*"
 flask-sqlalchemy = "*"
 gunicorn = "*"
 psycopg2-binary = "*"
+pyjwt = "*"
 
 [requires]
 python_version = "3.8.1"
