--- a/services/users/requirements.txt
+++ b/services/users/requirements.txt
@@ -5,5 +5,6 @@ flask-cors
 Flask-RESTX==0.1.1
 Flask-SQLAlchemy==2.4.1
 gunicorn==20.0.4
-psycopg2-binary==2.8.4
+psycopg2-binary==2.8.
+pyjwt
 werkzeug==0.16.1
