--- a/services/users/requirements.txt
+++ b/services/users/requirements.txt
@@ -1,10 +1,10 @@
-Flask==1.1.1
-Flask-Admin==1.5.5
+Flask
+Flask-Admin
 flask-bcrypt
 flask-cors
-Flask-RESTX==0.1.1
-Flask-SQLAlchemy==2.4.1
-gunicorn==20.0.4
-psycopg2-binary==2.8.
+Flask-RESTX
+Flask-SQLAlchemy
+gunicorn
+psycopg2-binary
 pyjwt
-werkzeug==0.16.1
+werkzeug
