--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,8 @@ phases:
   pre_build:
     commands:
       - echo logging in to ecr...
-      - aws ecr get-login-password \
+      - >
+        aws ecr get-login-password \
         --region $AWS_REGION \
         | docker login \
         --username AWS \
