--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 env:
   variables:
     AWS_REGION: "us-east-1"
-    REACT_APP_USERS_SERVICE_URL: "http://localhost:5001"
+    REACT_APP_USERS_SERVICE_URL: "http://flask-react-alb-1800355785.us-east-1.elb.amazonaws.com"
 
 phases:
   install:
